--- a/_main.tex
+++ b/_main.tex
@@ -36,8 +36,8 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={A Mini Bookdown},
-  pdfauthor={Your Name},
+  pdftitle={My Mini Bookdown},
+  pdfauthor={Allyson Ota},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -68,8 +68,8 @@
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
 
-\title{A Mini Bookdown}
-\author{Your Name}
+\title{My Mini Bookdown}
+\author{Allyson Ota}
 \date{}
 
 \begin{document}
@@ -83,5 +83,10 @@
 \chapter{Create your open textbook}\label{create-your-open-textbook}}
 
 Hello!!
+
+\hypertarget{introduction}{%
+\chapter{Introduction}\label{introduction}}
+
+This is where something interesting enough to hold your attention is said. Perhaps it will help you \textbf{solve a problem} that has been plaguing you for months?
 
 \end{document}
