deploy: a4524a8160ad56d67cb444c8fc82a143e90c6960

--- a/_main.tex
+++ b/_main.tex
@@ -99,4 +99,15 @@ Here is a review of existing methods.
 
 This is where methods are described.
 
+\hypertarget{applications}{%
+\chapter{Applications}\label{applications}}
+
+Some \emph{significant} applications are demonstrated within this chapter.
+
+\hypertarget{example-one}{%
+\section{Example one}\label{example-one}}
+
+\hypertarget{example-two}{%
+\section{Example two}\label{example-two}}
+
 \end{document}
