--- a/_main.tex
+++ b/_main.tex
@@ -110,4 +110,9 @@ Some \emph{significant} applications are demonstrated within this chapter.
 \hypertarget{example-two}{%
 \section{Example two}\label{example-two}}
 
+\hypertarget{final-words}{%
+\chapter{Final Words}\label{final-words}}
+
+We have finished a nice book.
+
 \end{document}
