deploy: 4d7c02efd73cd76ef462cddaa6f93acc1c35f2aa

--- a/_main.tex
+++ b/_main.tex
@@ -79,10 +79,12 @@
 \setcounter{tocdepth}{1}
 \tableofcontents
 }
-\hypertarget{create-your-open-textbook}{%
-\chapter{Create your open textbook}\label{create-your-open-textbook}}
+\hypertarget{preface}{%
+\chapter*{Preface}\label{preface}}
+\addcontentsline{toc}{chapter}{Preface}
 
-Hello!!
+In this book, we will introduce an interesting
+method.
 
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
